vlib/v/checker/tests/match_duplicate_branch.out
vlib/v/checker/tests/match_duplicate_branch.vv:16:3: error: match case `St1` is handled more than once
   14 |     match i {
   15 |         St1 { println('St1') }
   16 |         St1 { println('St1') }
      |         ~~~
   17 |         St2 { println('St2') }
   18 |     }
vlib/v/checker/tests/match_duplicate_branch.vv:21:3: error: match case `St1` is handled more than once
   19 |     match i {
   20 |         St1 { println('St1') }
   21 |         St1 { println('St1') }
      |         ~~~
   22 |         else { println('else') }
   23 |     }
vlib/v/checker/tests/match_duplicate_branch.vv:30:3: error: match case `green` is handled more than once
   28 |         .red { println('red') }
   29 |         .green { println('green') }
   30 |         .green { println('green') }
      |         ~~~~~~
   31 |         .blue { println('blue') }
   32 |     }
vlib/v/checker/tests/match_duplicate_branch.vv:35:3: error: match case `green` is handled more than once
   33 |     match c {
   34 |         .red, .green { println('red green') }
   35 |         .green { println('green') }
      |         ~~~~~~
   36 |         else { println('else') }
   37 |     }
vlib/v/checker/tests/match_duplicate_branch.vv:44:3: error: match case `2` is handled more than once
   42 |         1 { println('1') }
   43 |         2 { println('2') }
   44 |         2 { println('3') }
      |         ^
   45 |         else { println('else') }
   46 |     }
vlib/v/checker/tests/match_duplicate_branch.vv:52:3: error: match case `3` is handled more than once
   50 |     match i {
   51 |         1...5 { println('1 to 5') }
   52 |         3 { println('3') }
      |         ^
   53 |         else { println('else') }
   54 |     }
